# PythonProject_hw_oop

./: README.md  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_product_category_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_product_category_py.html
src/: common_modules.py  product_category.py
tests/: test_product_category.py
